--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Login</h1>
         <input type="text" class="username" name="username" placeholder="username">
         <input type="password" class="password" name="password" placeholder="password">
-        <button class="submit">Login</button>
+        <button type="button">Login</button>
     </form>
     <footer>
         <p class="attribution">
